# ct8-search-remove

./: .gitignore  CMakeLists.txt  README.md  assignment.json  canvas-page.html
.github/workflows/: classroom.yml
images/: cpp_diagrams.md  header_diagrams.md
include/: Node.h  SinglyLinkedList.h
src/: SinglyLinkedList.cpp  main.cpp
tests/: singly_linked_list_test.cpp
